updated about us

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ https://templatemo.com/tm-536-dream-pulse
               <div class="tm-section-wrap">
                 <section id="intro" class="tm-section">
                     <div class="tm-bg-white-transparent tm-intro">
-                        <h2 class="tm-section-title mb-5 text-uppercase tm-color-primary">Introducing Dream Pulse</h2>
+                        <h2 class="tm-section-title mb-5 text-uppercase tm-color-primary">Introducing LCS Consulting</h2>
                         <p class="tm-color-gray">
                           This box alpha 30 percent. Left sidebar is a sticky element.
                           Right side Contents are scrolling up and down. This background has a
@@ -126,14 +126,29 @@ https://templatemo.com/tm-536-dream-pulse
                     <div><i class="fas fa-6x fa-balance-scale mb-5 tm-section-icon"></i></div>                        
                     <h2 class="tm-section-title tm-color-primary mb-5">About Us</h2>
                     <p class="mb-5">
-                      When first section is scrolled up, BG image will be
-                      disappeared with a parallax effect. Donec ac tempor tellus, a
-                      eleifend ligula. Fusce vitae sem sed purus euismod
-                      condimentum.
+                      We are dedicated to providing cutting-edge solutions for businesses looking to harness the power of the cloud.
+                      Our team of experienced professionals specializes in working with the leading cloud platforms such as Amazon W
+                      eb Services (AWS), Microsoft Azure, and Google Cloud Platform (GCP) to help our clients achieve their goals.
                     </p>
                     <p>
-                      Sed at orci non metus tristique suscipit vitae in nibh. Sed
-                      rutrum odio ac est hendrerit, at vestibulum felis condimentum.
+                      Whether you are looking to migrate your existing infrastructure to the cloud, optimize your cloud resources, or
+                       develop new cloud-based applications, we have the expertise to help. Our team stays up-to-date with the latest
+                        technologies and best practices to ensure that we are always providing our clients with the most effective so
+                        lutions.
+                    </p>
+                    <p>
+                      We understand that every business has unique needs and requirements, which is why we take a tailored approach to
+                       each project we undertake. Our team works closely with our clients to understand their specific needs and goals,
+                        and to develop customized solutions that meet their unique requirements.
+                    </p>
+                    <p>
+                      At our IT consulting company, we are committed to providing our clients with the highest levels of service and su
+                      pport. Our team is available to provide ongoing support and maintenance, ensuring that your cloud infrastructure 
+                      continues to operate at peak performance.
+                    </p>
+                    <p>
+                      If you are looking for a trusted partner to help you navigate the complex world of cloud computing, look no further
+                       than our IT consulting company. We are here to help you achieve your goals and succeed in the digital age.
                     </p>
                 </div>
               </div>
