updated company profile

--- a/index.html
+++ b/index.html
@@ -157,14 +157,30 @@ https://templatemo.com/tm-536-dream-pulse
                     <div><i class="far fa-6x fa-building mb-5 tm-section-icon"></i></div>
                     <h2 class="tm-section-title tm-color-primary mb-5">Company Profile</h2>
                     <p class="mb-5">
-                      You can use this template for your commercial websites or for your clients. 
-                      You are NOT allowed to re-post this template as a downloadable ZIP file 
-                      on your template collection sites. It is illegal.
+                      Leading provider of innovative solutions for businesses around the world. Our company is dedicated to helping our clients
+                       achieve their goals and succeed in the rapidly evolving digital landscape.
                     </p>
                     <p>
-                      Suspendisse fermentum orci eget lorem euismod suscipit. Morbi
-                      condimentum odio metus, at finibus dolor sollicitudin quis.
-                      Curabitur eu congue erat.
+                      With a team of experienced professionals and a track record of success, we specialize in providing customized solutions t
+                      hat meet our clients' unique needs and requirements. We are committed to staying at the forefront of the latest technolog
+                      ies and best practices to ensure that we are always providing our clients with the most effective solutions.
+                    </p>
+                    <p>
+                      Our company offers a range of services, including IT consulting, cloud solutions, software development, and digital market
+                      ing. We work with businesses of all sizes and across a variety of industries, from startups to multinational corporations.
+                    </p>
+                    <p>
+                      At our company, we believe that the key to success is building strong, long-lasting relationships with our clients. We work
+                       closely with our clients to understand their specific needs and goals, and to develop solutions that are tailored to their
+                        unique requirements.
+                    </p>
+                    <p>
+                      Our team is dedicated to providing our clients with the highest levels of service and support. We are committed to ensuring 
+                      that our clients' projects are delivered on time and within budget, and that their expectations are exceeded.
+                    </p>
+                    <p>
+                      If you are looking for a trusted partner to help you achieve your business goals, look no further than our company. We are 
+                      here to help you succeed in the digital age, and we look forward to working with you.
                     </p>
                 </div>
               </div>
