--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ https://templatemo.com/tm-536-dream-pulse
                 </li>
                 <li class="nav-item">
                   <a href="#work" class="nav-link">
-                    <span class="d-inline-block mr-3">Work</span>
+                    <span class="d-inline-block mr-3">Technologies</span>
                     <span class="d-inline-block tm-white-rect"></span>
                   </a>
                 </li>
@@ -180,7 +180,7 @@ https://templatemo.com/tm-536-dream-pulse
                     </p>
                     <p>
                       If you are looking for a trusted partner to help you achieve your business goals, look no further than our company. We are 
-                      here to help you succeed in the digital age, and we look forward to working with you.
+                      here to help you succeed, and we look forward to working with you.
                     </p>
                 </div>
               </div>
@@ -197,10 +197,10 @@ https://templatemo.com/tm-536-dream-pulse
                           <div class="tm-gallery">
                             <div class="tm-gallery-item">                        
                               <figure class="effect-bubba">
-                                <img src="img/gallery/01.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="img/gallery/aws.jpg" alt="Our Technologies Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Fresh <span>Bubba</span></h2>
-                                  <p>Bubba likes to appear out of thin air.</p>
+                                  <p>Amazon Web Services (AWS) is a leading cloud computing platform that offers a wide range of services to help businesses and organizations of all sizes operate more efficiently.</p>
                                   <a href="img/gallery/large/01.jpg">View more</a>
                                 </figcaption>
                               </figure>
