--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ https://templatemo.com/tm-536-dream-pulse
                           <div class="tm-gallery">
                             <div class="tm-gallery-item">                        
                               <figure class="effect-bubba">
-                                <img src="img/gallery/aws.jpg" alt="Our Technologies Image" class="img-fluid">
+                                <img src="img/gallery/aws.png" alt="Our Technologies Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Fresh <span>Bubba</span></h2>
                                   <p>Amazon Web Services (AWS) is a leading cloud computing platform that offers a wide range of services to help businesses and organizations of all sizes operate more efficiently.</p>
