--- a/index.html
+++ b/index.html
@@ -107,9 +107,12 @@ https://templatemo.com/tm-536-dream-pulse
                     <div class="tm-bg-white-transparent tm-intro">
                         <h2 class="tm-section-title mb-5 text-uppercase tm-color-primary">Introducing LCS Consulting</h2>
                         <p class="tm-color-gray">
-                          This box alpha 30 percent. Left sidebar is a sticky element.
-                          Right side Contents are scrolling up and down. This background has a
-                          parallax effect.
+                          where we are dedicated to providing cutting-edge solutions for 
+                          businesses looking to harness the power of the cloud. Our team
+                           of experienced professionals specializes in working with the 
+                           leading cloud platforms such as Amazon Web Services (AWS), 
+                           Microsoft Azure, and Google Cloud Platform (GCP) to help our 
+                           clients achieve their goals.
                         </p>
                         <p class="mb-0 tm-color-gray">
                           Dream Pulse is a Bootstrap 4.3.1 template designed for your websites. You can modify this layout as you like.
