play with tech images

--- a/index.html
+++ b/index.html
@@ -200,81 +200,81 @@ https://templatemo.com/tm-536-dream-pulse
                           <div class="tm-gallery">
                             <div class="tm-gallery-item">                        
                               <figure class="effect-bubba">
-                                <img src="img/gallery/aws.png" alt="Our Technologies Image" class="img-fluid">
+                                <img src="img/gallery/azure.png" alt="Our Technologies Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Fresh <span>Bubba</span></h2>
                                   <p>Amazon Web Services (AWS) is a leading cloud computing platform that offers a wide range of services to help businesses and organizations of all sizes operate more efficiently.</p>
-                                  <a href="img/gallery/large/01.jpg">View more</a>
+                                  <a href="img/gallery/large/azure.jpg">View more</a>
                                 </figcaption>
                               </figure>
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="img/gallery/02.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="img/gallery/azure.jpg" alt="Our Work Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Fresh <span>Bubba</span></h2>
                                   <p>Bubba likes to appear out of thin air.</p>
-                                  <a href="img/gallery/large/02.jpg">View more</a>
+                                  <a href="img/gallery/large/azure.jpg">View more</a>
                                 </figcaption>
                               </figure>
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="img/gallery/03.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="img/gallery/azure.jpg" alt="Our Work Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Fresh <span>Bubba</span></h2>
                                   <p>Bubba likes to appear out of thin air.</p>
-                                  <a href="img/gallery/large/03.jpg">View more</a>
+                                  <a href="img/gallery/large/azure.jpg">View more</a>
                                 </figcaption>
                               </figure>
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="img/gallery/04.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="img/gallery/azure.jpg" alt="Our Work Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Fresh <span>Bubba</span></h2>
                                   <p>Bubba likes to appear out of thin air.</p>
-                                  <a href="img/gallery/large/04.jpg">View more</a>
+                                  <a href="img/gallery/large/azure.jpg">View more</a>
                                 </figcaption>
                               </figure>
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="img/gallery/05.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="img/gallery/azure.jpg" alt="Our Work Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Fresh <span>Bubba</span></h2>
                                   <p>Bubba likes to appear out of thin air.</p>
-                                  <a href="img/gallery/large/05.jpg">View more</a>
+                                  <a href="img/gallery/large/azure.jpg">View more</a>
                                 </figcaption>
                               </figure>
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="img/gallery/06.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="img/gallery/azure.jpg" alt="Our Work Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Fresh <span>Bubba</span></h2>
                                   <p>Bubba likes to appear out of thin air.</p>
-                                  <a href="img/gallery/large/06.jpg">View more</a>
+                                  <a href="img/gallery/large/azure.jpg">View more</a>
                                 </figcaption>
                               </figure>
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="img/gallery/07.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="img/gallery/azure.jpg" alt="Our Work Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Fresh <span>Bubba</span></h2>
                                   <p>Bubba likes to appear out of thin air.</p>
-                                  <a href="img/gallery/large/07.jpg">View more</a>
+                                  <a href="img/gallery/large/azure.jpg">View more</a>
                                 </figcaption>
                               </figure>
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="img/gallery/08.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="img/gallery/azure.jpg" alt="Our Work Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Fresh <span>Bubba</span></h2>
                                   <p>Bubba likes to appear out of thin air.</p>
-                                  <a href="img/gallery/large/08.jpg">View more</a>
+                                  <a href="img/gallery/large/azure.jpg">View more</a>
                                 </figcaption>
                               </figure>
                             </div>
