updated tech desc

--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@ https://templatemo.com/tm-536-dream-pulse
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="img/gallery/azure.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="img/gallery/azure.jpg" alt="Our Technologies Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Fresh <span>Bubba</span></h2>
-                                  <p>Bubba likes to appear out of thin air.</p>
+                                  <p>Azure is a cloud computing platform that provides a range of services and tools for building, deploying, and managing applications and infrastructure in the cloud.</p>
                                   <a href="img/gallery/large/azure.jpg">View more</a>
                                 </figcaption>
                               </figure>
@@ -223,7 +223,7 @@ https://templatemo.com/tm-536-dream-pulse
                                 <img src="img/gallery/azure.jpg" alt="Our Work Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Fresh <span>Bubba</span></h2>
-                                  <p>Bubba likes to appear out of thin air.</p>
+                                  <p>GCP is a cloud computing platform offered by Google that provides a wide range of cloud-based services, including computing, storage, networking, data analytics, machine learning, and more, to help businesses scale and grow.</p>
                                   <a href="img/gallery/large/azure.jpg">View more</a>
                                 </figcaption>
                               </figure>
