--- a/index.html
+++ b/index.html
@@ -203,78 +203,78 @@ https://templatemo.com/tm-536-dream-pulse
                                 <img src="img/gallery/azure.png" alt="Our Technologies Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Fresh <span>Bubba</span></h2>
-                                  <p>Amazon Web Services (AWS) is a leading cloud computing platform that offers a wide range of services to help businesses and organizations of all sizes operate more efficiently.</p>
-                                  <a href="img/gallery/large/azure.jpg">View more</a>
+                                  <p>AWS computing platform that offers a wide range of services.</p>
+                                  <a href="img/gallery/large/azure.png">View more</a>
                                 </figcaption>
                               </figure>
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="img/gallery/azure.jpg" alt="Our Technologies Image" class="img-fluid">
+                                <img src="img/gallery/azure.png" alt="Our Technologies Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Fresh <span>Bubba</span></h2>
                                   <p>Azure is a cloud computing platform that provides a range of services and tools for building, deploying, and managing applications and infrastructure in the cloud.</p>
-                                  <a href="img/gallery/large/azure.jpg">View more</a>
+                                  <a href="img/gallery/large/azure.png">View more</a>
                                 </figcaption>
                               </figure>
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="img/gallery/azure.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="img/gallery/azure.png" alt="Our Work Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Fresh <span>Bubba</span></h2>
                                   <p>GCP is a cloud computing platform offered by Google that provides a wide range of cloud-based services, including computing, storage, networking, data analytics, machine learning, and more, to help businesses scale and grow.</p>
-                                  <a href="img/gallery/large/azure.jpg">View more</a>
+                                  <a href="img/gallery/large/azure.png">View more</a>
                                 </figcaption>
                               </figure>
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="img/gallery/azure.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="img/gallery/azure.png" alt="Our Work Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Fresh <span>Bubba</span></h2>
                                   <p>Bubba likes to appear out of thin air.</p>
-                                  <a href="img/gallery/large/azure.jpg">View more</a>
+                                  <a href="img/gallery/large/azure.png">View more</a>
                                 </figcaption>
                               </figure>
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="img/gallery/azure.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="img/gallery/azure.png" alt="Our Work Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Fresh <span>Bubba</span></h2>
                                   <p>Bubba likes to appear out of thin air.</p>
-                                  <a href="img/gallery/large/azure.jpg">View more</a>
+                                  <a href="img/gallery/large/azure.png">View more</a>
                                 </figcaption>
                               </figure>
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="img/gallery/azure.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="img/gallery/azure.png" alt="Our Work Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Fresh <span>Bubba</span></h2>
                                   <p>Bubba likes to appear out of thin air.</p>
-                                  <a href="img/gallery/large/azure.jpg">View more</a>
+                                  <a href="img/gallery/large/azure.png">View more</a>
                                 </figcaption>
                               </figure>
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="img/gallery/azure.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="img/gallery/azure.png" alt="Our Work Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Fresh <span>Bubba</span></h2>
                                   <p>Bubba likes to appear out of thin air.</p>
-                                  <a href="img/gallery/large/azure.jpg">View more</a>
+                                  <a href="img/gallery/large/azure.png">View more</a>
                                 </figcaption>
                               </figure>
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="img/gallery/azure.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="img/gallery/azure.png" alt="Our Work Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Fresh <span>Bubba</span></h2>
                                   <p>Bubba likes to appear out of thin air.</p>
-                                  <a href="img/gallery/large/azure.jpg">View more</a>
+                                  <a href="img/gallery/large/azure.png">View more</a>
                                 </figcaption>
                               </figure>
                             </div>
