--- a/index.html
+++ b/index.html
@@ -203,7 +203,9 @@ https://templatemo.com/tm-536-dream-pulse
                                 <img src="img/gallery/azure.png" alt="Our Technologies Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Fresh <span>Bubba</span></h2>
-                                  <p>AWS computing platform that offers a wide range of services.</p>
+                                  <p>AWS computing platform that offers a wide range of services.
+                                    
+                                  </p>
                                   <a href="img/gallery/large/azure.png">View more</a>
                                 </figcaption>
                               </figure>
