--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ https://templatemo.com/tm-536-dream-pulse
                 <div class="w-100 tm-double-border-1 tm-border-gray">
                     <div class="tm-double-border-2 tm-border-gray tm-box-pad">
                       <div class="tm-gallery-wrap">
-                          <h2 class="tm-color-primary tm-section-title mb-4 ml-2">Our Work</h2>
+                          <h2 class="tm-color-primary tm-section-title mb-4 ml-2">Technologies</h2>
                           <div class="tm-gallery">
                             <div class="tm-gallery-item">                        
                               <figure class="effect-bubba">
@@ -204,7 +204,7 @@ https://templatemo.com/tm-536-dream-pulse
                                 <figcaption>
                                   <h2>Fresh <span>Bubba</span></h2>
                                   <p>AWS computing platform that offers a wide range of services.
-                                    
+
                                   </p>
                                   <a href="img/gallery/large/azure.png">View more</a>
                                 </figcaption>
