--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Dream Pulse TemplateMo</title>
-<!--
-DREAM PULSE
-https://templatemo.com/tm-536-dream-pulse
--->
+    <title>LCS Consulting</title>
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -107,15 +104,15 @@ https://templatemo.com/tm-536-dream-pulse
                     <div class="tm-bg-white-transparent tm-intro">
                         <h2 class="tm-section-title mb-5 text-uppercase tm-color-primary">Introducing LCS Consulting</h2>
                         <p class="tm-color-gray">
-                          where we are dedicated to providing cutting-edge solutions for 
-                          businesses looking to harness the power of the cloud. Our team
-                           of experienced professionals specializes in working with the 
-                           leading cloud platforms such as Amazon Web Services (AWS), 
-                           Microsoft Azure, and Google Cloud Platform (GCP) to help our 
-                           clients achieve their goals.
+                          We are dedicated to providing cutting-edge solutions for businesses 
+                          looking to harness the power of the cloud. Our team of experienced 
+                          professionals specializes in working with the leading cloud platforms
+                          such as Amazon Web Services (AWS), Microsoft Azure, and Google Cloud 
+                          Platform (GCP) to help our clients achieve their goals.
                         </p>
                         <p class="mb-0 tm-color-gray">
-                          Dream Pulse is a Bootstrap 4.3.1 template designed for your websites. You can modify this layout as you like.
+                          If you are looking for a trusted partner to help you navigate the complex world of cloud computing, look no further
+                       than our IT consulting company. We are here to help you achieve your goals and succeed in the digital age.
                         </p>
                     </div>              
                 </section>
