--- a/index.html
+++ b/index.html
@@ -197,11 +197,9 @@
                           <div class="tm-gallery">
                             <div class="tm-gallery-item">                        
                               <figure class="effect-bubba">
-                                <img src="img/gallery/azure.png" alt="Our Technologies Image" class="img-fluid">
+                                <img src="img/gallery/aws.png" alt="Our Technologies Image" class="img-fluid">
                                 <figcaption>
-                                  <h2>Fresh <span>Bubba</span></h2>
                                   <p>AWS computing platform that offers a wide range of services.
-
                                   </p>
                                   <a href="img/gallery/large/azure.png">View more</a>
                                 </figcaption>
@@ -219,7 +217,7 @@
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="img/gallery/azure.png" alt="Our Work Image" class="img-fluid">
+                                <img src="img/gallery/gcp.png" alt="Our Technologies Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Fresh <span>Bubba</span></h2>
                                   <p>GCP is a cloud computing platform offered by Google that provides a wide range of cloud-based services, including computing, storage, networking, data analytics, machine learning, and more, to help businesses scale and grow.</p>
@@ -229,10 +227,9 @@
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="img/gallery/azure.png" alt="Our Work Image" class="img-fluid">
+                                <img src="img/gallery/k8s.png" alt="Our Technologies Image" class="img-fluid">
                                 <figcaption>
-                                  <h2>Fresh <span>Bubba</span></h2>
-                                  <p>Bubba likes to appear out of thin air.</p>
+                                  <p>Open-source container orchestration platform that automates the deployment, scaling, and management of containerized applications. </p>
                                   <a href="img/gallery/large/azure.png">View more</a>
                                 </figcaption>
                               </figure>
