--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="img/gallery/sre.png" alt="Our Solutions Image" class="img-fluid">
+                                <img src="img/gallery/sre1.png" alt="Our Solutions Image" class="img-fluid">
                                 <figcaption>
                                   <p>Site Reliability Engineering.</p>
                                   <a href="img/gallery/large/azure.png">View more</a>
