--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
               <div class="tm-brand-box">
                 <div class="tm-double-border-1">
                   <div class="tm-double-border-2">
-                    <h1 class="tm-brand text-uppercase">LCS</h1>
+                     <!-- <img src="img/eks.png" alt="Client Image" class="img-fluid tm-client-img" /> -->
+                  <h1 class="tm-brand text-uppercase">LCS</h1>
                   </div>
                 </div>
               </div>
@@ -391,7 +392,7 @@
                         </div>
                 
                         <div class="form-group">
-                          <textarea rows="4" id="contact_message" name="contact_message" class="form-control rounded-0 border-top-0 border-right-0 border-left-0" placeholder="Message..." required=""></textarea>
+                          <textarea rows="4" id="contact_message" name="contact_message" class="form-control rounded-0 border-top-1 border-right-1 border-left-1" placeholder="Message..." required=""></textarea>
                         </div>
                 
                         <div class="form-group mb-0">
