--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
               <div class="tm-brand-box">
                 <div class="tm-double-border-1">
                   <div class="tm-double-border-2">
-                     <!-- <img src="img/eks.png" alt="Client Image" class="img-fluid tm-client-img" /> -->
-                  <h1 class="tm-brand text-uppercase">LCS</h1>
+                     <img src="img/logo1.png" alt="Client Image" class="img-fluid tm-client-img" />
+                 <!-- <h1 class="tm-brand text-uppercase">LCS</h1> -->
                   </div>
                 </div>
               </div>
