--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <title>LCS Consulting</title>
 
+    <linl rel="shortcut icon" href="/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -167,7 +168,7 @@
               </div>
             </section>
           </div>
-            
+         
           <div class="tm-section-wrap bg-white">
             <section id="work" class="row tm-section">
               <div class="col-12">
